--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -1,12 +1,11 @@
 name: "Terraform Plan"
 
-on:
-  pull_request:
+on: ["push","pull_request"]
 
 env:
-  TF_CLOUD_ORGANIZATION: "YOUR-ORGANIZATION-HERE"
+  TF_CLOUD_ORGANIZATION: "GH-Actions-TF"
   TF_API_TOKEN: "${{ secrets.TF_API_TOKEN }}"
-  TF_WORKSPACE: "learn-terraform-github-actions"
+  TF_WORKSPACE: "GH-Actions-TF"
   CONFIG_DIRECTORY: "./"
 
 jobs:
