--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -1,17 +1,28 @@
 name: 'Terraform'
+
 on:
   push:
-    branches:
-    - gh-actions
+    branches: [ "gh-actions" ]
+
+permissions:
+  contents: read
+  id-token: write
+
 jobs:
-  build:
+  terraform:
+    name: 'Terraform'
     runs-on: ubuntu-latest
+
     steps:
     - name: Checkout
-      uses: actions/checkout@v2
-    - name: Terraform Init
+      uses: actions/checkout@v3
+
+    - name: login
+      uses: Azure/login@v1
+      with:
+        client-id: ${{ secrets.AZURE_CLIENT_ID }}
+        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+
+    - name: TF Init
       run: terraform init
-    - name: Terraform Plan
-      run: terraform plan
-    - name: Terraform Apply
-      run: terraform apply
